tests/snapshots/list_test__list_alphabetical_sorting.snap
---
source: tests/list_test.rs
expression: stdout.trim()
---
Available profiles:

→ alpha           (zimfw)
  middle          (zinit)
  zebra           (oh-my-zsh)
