tests/snapshots/list_test__list_empty_profiles_directory.snap
---
source: tests/list_test.rs
expression: stdout.trim()
---
No profiles found. Create your first profile with 'zprof create <name>'
