tests/snapshots/list_test__list_multiple_profiles_with_active.snap
---
source: tests/list_test.rs
expression: stdout.trim()
---
Available profiles:

  experimental    (zimfw)
  minimal         (zinit)
→ work            (oh-my-zsh)
