tests/snapshots/list_test__list_no_active_profile.snap
---
source: tests/list_test.rs
expression: stdout.trim()
---
Available profiles:

  minimal         (zinit)
  work            (oh-my-zsh)
